# RGB-D_visual_odometry

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
odometry_evaluator/: CMakeLists.txt  package.xml
odometry_evaluator/src/: odometry_evaluator.cpp
simulation_launch/: CMakeLists.txt  package.xml
simulation_launch/config/: rviz_config.rviz
simulation_launch/launch/: all.launch.py  robot_world.launch.py  spawn_robot.launch.py
simulation_launch/models/apollo15_landing_site_1000x1000/: model.sdf
simulation_launch/models/lunar_arena/: model.config  model.sdf
simulation_launch/models/lunar_arena/meshes/: lunar_arena.dae
simulation_launch/models/lunar_arena_test/: model.config  model.sdf
simulation_launch/models/lunar_arena_test/meshes/: lunar_arena_test.dae
simulation_launch/urdf/: lunabot.urdf  lunabot.xacro  lunabot_tracked.urdf  lunabot_tracked.xacro
simulation_launch/world/: apollo_landing_site.world  apriltag_test.world  lunar_arena.world
visual_odometry/: CMakeLists.txt  package.xml
visual_odometry/include/visual_odometry/: visual_odom_core.hpp  visual_odom_node.hpp
visual_odometry/src/: main.cpp  visual_odom_core.cpp
